// アカウントGoogleToken取得リクエスト
syntax = "proto3";

package api.admin;

message AccountGetGoogleTokenRequest {
  string code = 1;
}
